--- a/blacksmith_simulator.css
+++ b/blacksmith_simulator.css
@@ -25,6 +25,7 @@ body {
     padding: 0.5em;
     margin: 0.25em;
     text-align: center;
+    vertical-align: middle;
     
     -webkit-touch-callout: none; /* iOS Safari */
       -webkit-user-select: none; /* Chrome/Safari/Opera */
@@ -41,6 +42,7 @@ body {
     vertical-align: middle;
     padding: 0.5em;
     margin: 0.5em 0;
+    cursor: pointer;
     
     -webkit-touch-callout: none; /* iOS Safari */
       -webkit-user-select: none; /* Chrome/Safari/Opera */
@@ -52,9 +54,55 @@ body {
 .game div.recipe.recipe-disabled {
     border-color: gray;
     background: gray;
+    cursor: default;
+}
+.game .adventurer {
+    display: inline-block;
+    border: 2px solid white;
+    border-radius: 0.5em;
+    padding: 0.5em;
+    margin: 0.25em;
+    text-align: center;
+    vertical-align: top;
+    
+    -webkit-touch-callout: none; /* iOS Safari */
+      -webkit-user-select: none; /* Chrome/Safari/Opera */
+       -khtml-user-select: none; /* Konqueror */
+         -moz-user-select: none; /* Firefox */
+          -ms-user-select: none; /* Internet Explorer/Edge */
+              user-select: none;
 }
 
-.game div.game-currency {
+.game .game-sleep {
+    display: inline-block;
+    position: relative;
+    top: 0;
+    left: 0;
+    color: black;
+    background: white;
+    border: 2px solid white;
+    border-radius: 0.5em;
+    padding: 0.5em;
+    margin: 0;
+    font-weight: bold;
+    font-size: 1.2em;
+    cursor: pointer;
+    
+    -webkit-touch-callout: none; /* iOS Safari */
+      -webkit-user-select: none; /* Chrome/Safari/Opera */
+       -khtml-user-select: none; /* Konqueror */
+         -moz-user-select: none; /* Firefox */
+          -ms-user-select: none; /* Internet Explorer/Edge */
+              user-select: none;
+}
+.game .game-sleep:hover {
+    color: black;
+    background: gray;
+    border-color: gray;
+    top: 3px;
+    left: 3px;
+}
+.game .game-currency {
     display: block;
     position: absolute;
     top: 0;
